force-app/main/default/objects/Lead/fields/Seasonal_promotions__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_promotions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the customer interested in receiving information about promotions and special offers related to seasonal tours?</inlineHelpText>
    <label>Seasonal Promotions</label>
    <type>Checkbox</type>
</CustomField>