force-app/main/default/objects/Lead/fields/Tour_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Tour_Preferences__c</fullName>
    <inlineHelpText>This field will record detailed information about the travel agent&apos;s preferences for the tours sold, for example: &apos;Highest interest in holiday offers in Europe&apos; or &apos;Specialising in tours for seniors’.</inlineHelpText>
    <label>Tour Preferences</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>