force-app/main/default/objects/Lead/fields/Travel_Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>Travel_Agency_Type__c</fullName>
    <inlineHelpText>Allows segmentation based on type of business.</inlineHelpText>
    <label>Travel Agency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stationary office</fullName>
            </value>
            <value>
                <fullName>Online office</fullName>
            </value>
            <value>
                <fullName>Luxury office</fullName>
            </value>
            <value>
                <fullName>Tour operator</fullName>
            </value>
            <value>
                <fullName>Exotic travel specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>