force-app/main/default/objects/Lead/validationRules/ANNUALREV001_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ANNUALREV001_Required</fullName>
    <active>true</active>
    <description>Prevents saving the record if &apos;Annual Revenue&apos; is not provided.</description>
    <errorConditionFormula>NOT($Setup.Admin_Validation_Settings__c.Is_Admin_Validation_Excluded__c) &amp;&amp;
ISBLANK(AnnualRevenue)</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Please provide &apos;Annual Revenue&apos;.</errorMessage>
</ValidationRule>