force-app/main/default/objects/Lead/validationRules/INDUSTRY001_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>INDUSTRY001_Required</fullName>
    <active>true</active>
    <description>Prevents saving the record if &apos;Industry&apos; is not provided.</description>
    <errorConditionFormula>NOT($Setup.Admin_Validation_Settings__c.Is_Admin_Validation_Excluded__c) &amp;&amp;
ISPICKVAL(Industry, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Industry</errorDisplayField>
    <errorMessage>Please provide &apos;Industry&apos;.</errorMessage>
</ValidationRule>