force-app/main/default/objects/Lead/validationRules/NUMEMP001_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>NUMEMP001_Required</fullName>
    <active>true</active>
    <description>Prevents saving the record if &apos;Number of Employees&apos; is not provided.</description>
    <errorConditionFormula>NOT($Setup.Admin_Validation_Settings__c.Is_Admin_Validation_Excluded__c) &amp;&amp;
ISBLANK(NumberOfEmployees)</errorConditionFormula>
    <errorDisplayField>NumberOfEmployees</errorDisplayField>
    <errorMessage>Please provide &apos;Number of Employees&apos;.</errorMessage>
</ValidationRule>